--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -16979,7 +16979,7 @@ and easy to understand for any interested inquirer.
 
 In this chapter, first some general design choices are tackled in @code{Why
 C} and @code{Program design philosophy}. The project management webpage and
-mailing lists are explained in @ref{Gnuastro project management} and
+mailing lists are explained in @ref{Gnuastro project webpage} and
 @code{Developing mailing lists}. In @ref{Coding conventions}, Gnuastro's
 adopted coding conventions are discussed and is followed by @ref{Program
 source} which describes how to easily navigate the source files in each
